# Yet-Another-Reuse-Distance-Analyzer

./: .gitignore  CMakeLists.txt  README.md
backend/: _plot_utils.py  block_trace.py  ca_metrics.py  calls.py  compare_legacy.py  dilation.py  gt_cache.py  lru_sim.py  main.py  merger.py  parser.py  plot.py  plot_timing.py  predictor.py  predictor3d.py  profile_export.py  report.py  sequence_summary.py  series.py  stability.py  verify.py  volatile.py  volatile2d.py  volatile3d.py  volatile3d_variable.py
backend/tests/: test_ca_metrics.py  test_calls.py  test_dilation.py  test_e2e.py  test_gt_cache.py  test_lru_sim.py  test_merger.py  test_parser.py  test_plot_timing.py  test_sequence_summary.py  test_stability.py
include/: AccessBuilder.hpp  ArrayMetadata.hpp  IrHelpers.hpp  JsonExportVisitor.hpp  Statement.hpp
src/: AccessBuilder.cpp  ArrayMetadata.cpp  IrHelpers.cpp  LoopAnalysisPass.cpp
tasks/: polybench_2mm.c  polybench_atax.c  polybench_correlation.c  polybench_gemm.c  polybench_jacobi.c  test_1d.c  test_2d.c  test_2steps.c  test_call.c  test_constant_access.c  test_constant_access2.c  test_constant_variable.c  test_global.c  test_local.c  test_matmul.c  test_matmul_cache_friendly.c  test_matmul_params.c  test_mixed_global_param.c  test_multi.c  test_multi_array.c  test_ptr_const_param.c  test_ptr_param.c  test_regular_block.c  test_stencil.c  yard_analyze.h
tests/: ArrayMetadata_test.cpp  IrHelpersGep_test.cpp  IrHelpers_test.cpp  Statement_test.cpp
